# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  setup.py  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database.py  index.py
src/database/: database.py
src/services/: connection_services.py  user_services.py
src/tests/: test_database.py  test_registration.py  test_user_service.py  test_validation.py
src/ui/: login_screen.py  main_window.py  registration_screen.py  user_interface.py
src/validation/: validation.py
